setup 4-layer architecture with simple test

--- a/employee-reimbursement-system/src/main/resources/application.properties
+++ b/employee-reimbursement-system/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=Employee Reimbursement System
+
+# default port is 8080 - can change like so:
+server.port = 4444
+
+# Database Credentials ----
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+# Spring Data Settings ----
+
+# Allows us to see SQL running in console when DB operations occur
+spring.jpa.show-sql=true
+# Setup DDL to "update" the DB when model changes occur
+spring.jpa.hibernate.ddl-auto=update
+# Specify schema being used
+spring.jpa.properties.hibernate.default_schema=employeereimbursementsystem
